Fix jobs title padding on mobile

--- a/common/app/assets/stylesheets/module/commercial/v2/_jobs.scss
+++ b/common/app/assets/stylesheets/module/commercial/v2/_jobs.scss
@@ -12,7 +12,7 @@
     /* Line items */
     .lineitem__image {
         border: $gs-gutter/4 solid #fff;
-        width: 120px;
+        width: 100px;
 
         @include mq(tablet) {
             width: 150px;
@@ -35,18 +35,22 @@
     .commercial__relevance--low {
         @include mq($until: tablet) {
             .lineitem.lineitem--low {
-                padding-left: 120px + $gs-gutter*1;
+                padding-left: 100px + $gs-gutter*1;
 
                 &:nth-child(2) {
                     display: none;
                 }
-            }
 
-            .lineitem__image {
-                float: left;
-                position: absolute;
-                left: 0;
-                top: $gs-baseline/2;
+                .lineitem__image {
+                    float: left;
+                    position: absolute;
+                    left: 0;
+                    top: $gs-baseline/2;
+                }
+
+                .lineitem__title {
+                    padding-right: 0;
+                }
             }
         }
 
